--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -10,17 +10,21 @@
 }
 
 .board {
-  display: grid;
-  grid-template-rows: repeat(8, 1fr);
-  grid-template-columns: repeat(8, 1fr);
+  position: relative;
   width: 640px;
   height: 640px;
   user-select: none;
-  border: 1px solid #000;
+  border-right: 1px solid #000;
+  border-bottom: 1px solid #000;
+  background-image: linear-gradient(to right, #000 1px, transparent 1px),
+    linear-gradient(to bottom, #000 1px, transparent 1px);
+  background-size: 80px 80px;
 }
 
-.cell {
+.stone {
+  position: absolute;
+  width: 80px;
+  height: 80px;
   display: grid;
   place-items: center;
-  border: 1px solid #000;
 }
